CREATE TYPE "tipo_usuario" AS ENUM (
  'hospede',
  'locador'
);

CREATE TYPE "tipo_propriedade" AS ENUM (
  'casa_inteira',
  'quarto_privativo',
  'quarto_compartilhado'
);

CREATE TYPE "status_reserva" AS ENUM (
  'pendente',
  'confirmada',
  'cancelada'
);

CREATE TABLE "usuario" (
  "cpf" varchar PRIMARY KEY NOT NULL,
  "nome" varchar NOT NULL,
  "sobrenome" varchar NOT NULL,
  "data_nascimento" date NOT NULL,
  "endereco" varchar NOT NULL,
  "sexo" varchar NOT NULL,
  "telefone" varchar UNIQUE NOT NULL,
  "email" varchar UNIQUE NOT NULL,
  "senha" varchar NOT NULL,
  "tipo" tipo_usuario NOT NULL,
  "loc_id" int NOT NULL
);

CREATE TABLE "localizacao" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "cidade" varchar NOT NULL,
  "estado" varchar NOT NULL,
  "pais" varchar NOT NULL,
  "cep" varchar NOT NULL,
  "bairro" varchar
);

CREATE TABLE "ponto_interesse" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "descricao" varchar,
  "loc_id" int NOT NULL
);

CREATE TABLE "locador" (
  "cpf" varchar PRIMARY KEY NOT NULL
);

CREATE TABLE "hospede" (
  "cpf" varchar PRIMARY KEY NOT NULL
);

CREATE TABLE "conta_bancaria" (
  "numero_conta" varchar PRIMARY KEY NOT NULL,
  "agencia" varchar NOT NULL,
  "tipo_conta" varchar NOT NULL,
  "locador_cpf" varchar NOT NULL
);

CREATE TABLE "propriedade" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "nome" varchar NOT NULL,
  "endereco" varchar NOT NULL,
  "tipo" tipo_propriedade NOT NULL,
  "num_quartos" int NOT NULL,
  "num_banheiros" int NOT NULL,
  "preco_noite" decimal NOT NULL,
  "max_hospedes" int NOT NULL,
  "min_noites" int NOT NULL,
  "max_noites" int NOT NULL,
  "taxa_limpeza" decimal,
  "checkin_hora" time,
  "checkout_hora" time,
  "locador_cpf" varchar NOT NULL,
  "loc_id" int NOT NULL
);

CREATE TABLE "quarto" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "prop_id" int NOT NULL,
  "num_camas" int NOT NULL,
  "tipo_cama" varchar NOT NULL,
  "banheiro_privativo" boolean NOT NULL
);

CREATE TABLE "comodidade" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "descricao" varchar
);

CREATE TABLE "propriedade_comodidade" (
  "prop_id" int NOT NULL,
  "comod_id" int NOT NULL,
  PRIMARY KEY ("prop_id", "comod_id")
);

CREATE TABLE "regra" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "descricao" varchar
);

CREATE TABLE "propriedade_regra" (
  "prop_id" int NOT NULL,
  "regra_id" int NOT NULL,
  PRIMARY KEY ("prop_id", "regra_id")
);

CREATE TABLE "reserva" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "hospede_cpf" varchar NOT NULL,
  "prop_id" int NOT NULL,
  "data_reserva" date NOT NULL,
  "data_checkin" date NOT NULL,
  "data_checkout" date NOT NULL,
  "num_hospedes" int NOT NULL,
  "imposto_pago" decimal,
  "preco_total" decimal,
  "preco_total_impostos" decimal,
  "taxa_limpeza" decimal,
  "status" status_reserva NOT NULL,
  "status_data" datetime DEFAULT (now())
);

CREATE TABLE "avaliacao" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "reserva_id" int,
  "hospede_cpf" varchar NOT NULL,
  "prop_id" int NOT NULL,
  "texto" varchar NOT NULL,
  "nota_limpeza" int,
  "nota_estrutura" int,
  "nota_comunicacao" int,
  "nota_localizacao" int,
  "nota_valor" int
);

CREATE TABLE "mensagem_aval" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "remetente_cpf" varchar NOT NULL,
  "destinatario_cpf" varchar NOT NULL,
  "ts" datetime DEFAULT (now()),
  "texto" varchar NOT NULL,
  "aval_id" int NOT NULL
);

CREATE TABLE "foto" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "url" varchar NOT NULL,
  "aval_id" int NOT NULL
);

CREATE TABLE "mensagem_chat" (
  "id" int PRIMARY KEY NOT NULL,
  "remetente_cpf" varchar NOT NULL,
  "destinatario_cpf" varchar NOT NULL,
  "ts" datetime DEFAULT (now()),
  "texto" varchar NOT NULL
);

ALTER TABLE "localizacao" ADD FOREIGN KEY ("id") REFERENCES "usuario" ("loc_id");

ALTER TABLE "localizacao" ADD FOREIGN KEY ("id") REFERENCES "propriedade" ("loc_id");

ALTER TABLE "ponto_interesse" ADD FOREIGN KEY ("loc_id") REFERENCES "localizacao" ("id");

ALTER TABLE "usuario" ADD FOREIGN KEY ("cpf") REFERENCES "locador" ("cpf");

ALTER TABLE "usuario" ADD FOREIGN KEY ("cpf") REFERENCES "hospede" ("cpf");

ALTER TABLE "propriedade" ADD FOREIGN KEY ("locador_cpf") REFERENCES "locador" ("cpf");

ALTER TABLE "locador" ADD FOREIGN KEY ("cpf") REFERENCES "conta_bancaria" ("locador_cpf");

ALTER TABLE "quarto" ADD FOREIGN KEY ("prop_id") REFERENCES "propriedade" ("id");

ALTER TABLE "propriedade" ADD FOREIGN KEY ("id") REFERENCES "propriedade_comodidade" ("prop_id");

ALTER TABLE "comodidade" ADD FOREIGN KEY ("id") REFERENCES "propriedade_comodidade" ("comod_id");

ALTER TABLE "propriedade" ADD FOREIGN KEY ("id") REFERENCES "propriedade_regra" ("prop_id");

ALTER TABLE "regra" ADD FOREIGN KEY ("id") REFERENCES "propriedade_regra" ("regra_id");

ALTER TABLE "reserva" ADD FOREIGN KEY ("hospede_cpf") REFERENCES "hospede" ("cpf");

ALTER TABLE "reserva" ADD FOREIGN KEY ("prop_id") REFERENCES "propriedade" ("id");

ALTER TABLE "reserva" ADD FOREIGN KEY ("id") REFERENCES "avaliacao" ("reserva_id");

ALTER TABLE "avaliacao" ADD FOREIGN KEY ("hospede_cpf") REFERENCES "hospede" ("cpf");

ALTER TABLE "avaliacao" ADD FOREIGN KEY ("prop_id") REFERENCES "propriedade" ("id");

ALTER TABLE "mensagem_aval" ADD FOREIGN KEY ("remetente_cpf") REFERENCES "usuario" ("cpf");

ALTER TABLE "mensagem_aval" ADD FOREIGN KEY ("destinatario_cpf") REFERENCES "usuario" ("cpf");

ALTER TABLE "mensagem_aval" ADD FOREIGN KEY ("aval_id") REFERENCES "avaliacao" ("id");

ALTER TABLE "foto" ADD FOREIGN KEY ("aval_id") REFERENCES "avaliacao" ("id");

ALTER TABLE "mensagem_chat" ADD FOREIGN KEY ("remetente_cpf") REFERENCES "usuario" ("cpf");

ALTER TABLE "mensagem_chat" ADD FOREIGN KEY ("destinatario_cpf") REFERENCES "usuario" ("cpf");
