Table usuario {
  cpf               varchar   [pk, not null]
  nome              varchar   [not null]
  sobrenome         varchar   [not null]
  data_nascimento   date      [not null]
  endereco          varchar   [not null]
  sexo              varchar   [not null]
  telefone          varchar   [not null, unique]
  email             varchar   [not null, unique]
  senha             varchar   [not null]
  tipo              tipo_usuario [not null]
  loc_id            int       [not null]
}

enum tipo_usuario {
  hospede
  locador
}

Table localizacao {
  id    int      [pk, increment, not null]
  cidade    varchar [not null]
  estado    varchar [not null]
  pais      varchar [not null]
  cep       varchar [not null]
  bairro    varchar
}

Table ponto_interesse {
  id  int [pk, increment, not null]
  descricao varchar
  loc_id int [not null]
}

Table locador {
  cpf      varchar   [pk, not null]      // herda de usuario
}

Table hospede {
  cpf      varchar   [pk, not null]      // herda de usuario
}

Table conta_bancaria {
  numero_conta   varchar   [pk, not null]
  agencia        varchar [not null]
  tipo_conta     varchar [not null]
  locador_cpf    varchar [not null]
}

Table propriedade {
  id         int       [pk, increment, not null]
  nome            varchar [not null]
  endereco        varchar [not null]
  tipo            tipo_propriedade [not null]
  num_quartos     int [not null]
  num_banheiros   int [not null]
  preco_noite     decimal [not null]
  max_hospedes    int [not null]
  min_noites      int [not null]
  max_noites      int [not null]
  taxa_limpeza    decimal
  checkin_hora    time
  checkout_hora   time
  locador_cpf     varchar [not null]
  loc_id          int [not null]
}

enum tipo_propriedade {
  casa_inteira
  quarto_privativo
  quarto_compartilhado
}

Table quarto {
  id          int      [pk, increment, not null]
  prop_id            int [not null]
  num_camas          int [not null]
  tipo_cama          varchar [not null]
  banheiro_privativo boolean [not null]
}

Table comodidade {
  id   int     [pk, increment, not null]
  descricao  varchar
}

Table propriedade_comodidade {
  prop_id   int [not null]
  comod_id  int [not null]

  Indexes {
    (prop_id, comod_id) [pk]
  }
}

Table regra {
  id   int     [pk, increment, not null]
  descricao  varchar
}

Table propriedade_regra {
  prop_id   int [not null]
  regra_id  int [not null]

  Indexes {
    (prop_id, regra_id) [pk]
  }
}

Table reserva {
  id                   int      [pk, increment, not null]
  hospede_cpf              varchar [not null]
  prop_id                  int [not null]
  data_reserva             date [not null]
  data_checkin             date [not null]
  data_checkout            date [not null]
  num_hospedes             int [not null]
  imposto_pago             decimal
  preco_total              decimal
  preco_total_impostos     decimal
  taxa_limpeza             decimal
  status                   status_reserva [not null]
  status_data  datetime [default: `now()`]
}

enum status_reserva {
  pendente [note: 'Esperando atualização']
  confirmada
  cancelada
}

Table avaliacao {
  id           int       [pk, increment, not null]
  reserva_id        int
  hospede_cpf       varchar [not null]
  prop_id           int   [not null]
  texto             varchar [not null]
  nota_limpeza      int
  nota_estrutura    int
  nota_comunicacao  int
  nota_localizacao  int
  nota_valor        int
}

Table mensagem_aval {
  id             int      [pk, increment, not null]
  remetente_cpf      varchar [not null]
  destinatario_cpf   varchar [not null]
  ts                 datetime [default: `now()`]
  texto              varchar [not null]
  aval_id           int    [not null]   // FK para a avaliação associada, se houver
}

Table foto {
  id           int       [pk, increment, not null]
  url          varchar  [not null]
  aval_id      int     [not null]   // FK para a avaliação que “inclui” esta foto
}

Table mensagem_chat {
  id                int [pk, not null]
  remetente_cpf     varchar [not null]
  destinatario_cpf  varchar [not null]
  ts                datetime [default: `now()`]
  texto             varchar [not null]
}

// —–– Relações (FKs) ——————————————————————————————————————————————————————————————————

Ref: usuario.loc_id                - localizacao.id
Ref: propriedade.loc_id            - localizacao.id

Ref: ponto_interesse.loc_id        > localizacao.id

Ref: locador.cpf                   - usuario.cpf
Ref: hospede.cpf                   - usuario.cpf

Ref: propriedade.locador_cpf       > locador.cpf
Ref: conta_bancaria.locador_cpf    - locador.cpf

Ref: propriedade.id           < quarto.prop_id

Ref: propriedade_comodidade.prop_id - propriedade.id
Ref: propriedade_comodidade.comod_id - comodidade.id

Ref: propriedade_regra.prop_id     - propriedade.id
Ref: propriedade_regra.regra_id    - regra.id

Ref: reserva.hospede_cpf           > hospede.cpf
Ref: reserva.prop_id               > propriedade.id

Ref: avaliacao.reserva_id          - reserva.id
Ref: avaliacao.hospede_cpf         > hospede.cpf
Ref: avaliacao.prop_id             > propriedade.id

Ref: mensagem_aval.remetente_cpf        > usuario.cpf
Ref: mensagem_aval.destinatario_cpf     > usuario.cpf
Ref: mensagem_aval.aval_id              > avaliacao.id
Ref: foto.aval_id                       > avaliacao.id

Ref: mensagem_chat.remetente_cpf        > usuario.cpf
Ref: mensagem_chat.destinatario_cpf     > usuario.cpf